--- a/style/css/my-style.css
+++ b/style/css/my-style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Questrial&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
-/*
+
 html{
   scroll-behavior:smooth;
-}*/
+}
 body {
-  font-family: 'Questrial', sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: #668586;
   font-size: 4em;
   color: white;
@@ -19,6 +19,7 @@ a:hover {
   color: inherit;
 }
 
+/* Sections */
 #about{
   position: relative;
   width: 100%;
@@ -28,31 +29,36 @@ a:hover {
   background: #668586;
   display: inline-block;
 }
-#projects {
+#projects, #interests, #experience {
+  height: auto !important;
   position: relative;
+  width: 100%
+}
+#projects {
   background: #82AEB1;
   width: 100%;
-  height: 100vh;
+  padding-top: 20%;
+  padding-bottom: 20%;
 }
 #interests {
-  position: relative;
   background: #A7ACD9;
   width: 100%;
-  height: 100vh;
 }
 #experience {
-  position: relative;
   background: #9E8FB2;
   width: 100%;
-  height: 100vh;
 }
 
 /* NAVIGATION */
 .nav {
   float: right;
-  padding: 1% 2% 0% 0%;
+  position: relative;
+  padding: 10px 20px 0px 10px;
+  margin-top: 5px;
+  margin-right: 5px;
   display: block;
-  font-size: 30%;
+  font-size: 20%;
+  background: #668586;
 }
 .nav ul {
   list-style:none;
@@ -60,7 +66,7 @@ a:hover {
   padding: 5%;
 }
 .nav li{
-  font-weight: 700;
+  t: 700;
   display: block;
 }
 .nav li a:hover {
@@ -78,10 +84,17 @@ a:hover {
 }
 
 /* TOP PAGE */
+#about .content {
+  padding-top: 10%; /* Smaller screens 15%*/
+  padding-bottom: 10%;
+  padding-right: 10%;
+  padding-left: 10%;
+}
 .heading {
   text-align: center;
   font-weight: 700;
   font-size: 100px;
+  letter-spacing: 6px;
   line-height: 1;
   text-decoration: none;
 }
@@ -95,19 +108,12 @@ a:hover {
   line-height: 1;
 }
 .initials{
-  padding: 0% 0% 0% 2%;
+  padding: 0% 0% 0% 20px;
   font-size: 100%;
   font-weight: 700;
   display: inline-block;
   font-family: 'Oswald', sans-serif;
 }
-.content {
-  padding-top: 10%; /* Smaller screens 15%*/
-  padding-bottom: 10%;
-  padding-right: 10%;
-  padding-left: 10%;
-}
-
 .icon {
   width: 30px;
   height: 30px;
@@ -117,4 +123,39 @@ a:hover {
 .icon:hover{
   width: 35px;
   height: 35px;
+}
+
+/* EXPERIENCE */
+.fnnslides {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: block;
+  width: 90%;
+  box-shadow: 4px 4px 5px grey;
+}
+.title {
+  font-size:30px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 1;
+  letter-spacing: 5px;
+}
+.description {
+  line-height: 1;
+  font-size: 15px;
+  padding-top: 2%;
+  font-weight: normal;
+  text-align: center;
+}
+.row {
+  margin: 0;
+  padding: 10% 5% 10% 5%;
+}
+.name {
+  position: relative;
+}
+#projects .content {
+
 }
