--- a/style/css/my-style.css
+++ b/style/css/my-style.css
@@ -1,12 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:100,100i,300,300i,400,400i,600,600i,700,700i|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
 html{
   scroll-behavior:smooth;
 }
 body {
-  font-family: 'Roboto', sans-serif;
-  background-color: #668586;
+  font-family: 'Josefin Sans', sans-serif;
+  background-color: #502E5B;
   font-size: 4em;
   color: white;
 }
@@ -26,7 +24,6 @@ a:hover {
   height: 100vh;
   padding: 10%
   margin-top: 0px;
-  background: #668586;
   display: inline-block;
 }
 #projects, #interests, #experience {
@@ -35,17 +32,15 @@ a:hover {
   width: 100%
 }
 #projects {
-  background: #82AEB1;
+  background-color: grey;
   width: 100%;
-  padding-top: 20%;
+  padding-top: 10%;
   padding-bottom: 20%;
 }
 #interests {
-  background: #A7ACD9;
   width: 100%;
 }
 #experience {
-  background: #9E8FB2;
   width: 100%;
 }
 
@@ -57,8 +52,8 @@ a:hover {
   margin-top: 5px;
   margin-right: 5px;
   display: block;
-  font-size: 20%;
-  background: #668586;
+  font-size: 22%;
+  font-weight: 100;
 }
 .nav ul {
   list-style:none;
@@ -92,14 +87,14 @@ a:hover {
 }
 .heading {
   text-align: center;
-  font-weight: 700;
+  font-weight: 500;
   font-size: 100px;
-  letter-spacing: 6px;
   line-height: 1;
   text-decoration: none;
 }
 .subheading {
   font-size: 30%;
+  font-weight: 200;
   padding-top: 1%;
   text-align: center;
 }
@@ -108,11 +103,21 @@ a:hover {
   line-height: 1;
 }
 .initials{
-  padding: 0% 0% 0% 20px;
-  font-size: 100%;
-  font-weight: 700;
+  padding: 0% 0% 0% 10px;
   display: inline-block;
-  font-family: 'Oswald', sans-serif;
+}
+.logo {
+  width: 100px;
+  height: 70px;
+  opacity: 1.0;
+  filter: alpha(opacity=100);
+  transition: opacity .55s ease-in-out;
+  -moz-transition: opacity .55s ease-in-out;
+  -webkit-transition: opacity .55s ease-in-out;
+}
+.logo:hover {
+  opacity: 0.5;
+  filter: alpha(opacity=40);
 }
 .icon {
   width: 30px;
@@ -126,27 +131,39 @@ a:hover {
 }
 
 /* EXPERIENCE */
-.fnnslides {
+.projectimg {
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
   margin-bottom: 10px;
   display: block;
+  /*width: 243px;
+  height: 136px;*/
   width: 90%;
-  box-shadow: 4px 4px 5px grey;
+  box-shadow: 4px 4px 7px #502E5B;
+  opacity: 0.5;
+  filter: alpha(opacity=40);
+  transition: opacity .55s ease-in-out;
+  -moz-transition: opacity .55s ease-in-out;
+  -webkit-transition: opacity .55s ease-in-out;
+}
+.projectimg:hover {
+  opacity: 1.0;
+  filter: alpha(opacity=100);
 }
 .title {
   font-size:30px;
-  font-weight: bold;
+  font-weight: 500;
   text-align: center;
+  padding-top: 15%;
   line-height: 1;
   letter-spacing: 5px;
 }
 .description {
-  line-height: 1;
   font-size: 15px;
+  font-weight: 100;
+  line-height: 1;
   padding-top: 2%;
-  font-weight: normal;
   text-align: center;
 }
 .row {
@@ -155,7 +172,4 @@ a:hover {
 }
 .name {
   position: relative;
-}
-#projects .content {
-
 }
