--- a/style/css/my-style.css
+++ b/style/css/my-style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:100,100i,300,300i,400,400i,600,600i,700,700i|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:100,100i,300,300i,400,400i,600,600i,700,700i&display=swap');
 html{
   scroll-behavior:smooth;
 }
@@ -8,6 +8,7 @@ body {
   font-size: 4em;
   color: white;
 }
+
 a {
   color: inherit;
   font-family: inherit;
@@ -15,6 +16,12 @@ a {
 a:hover {
   text-decoration: none;
   color: inherit;
+}
+
+/* Initial opacity is 0, fades into 1 */
+.heading, .subheading, .socials,
+.nav, .initials  {
+  opacity: 0;
 }
 
 /* Sections */
@@ -25,6 +32,7 @@ a:hover {
   padding: 10%
   margin-top: 0px;
   display: inline-block;
+  z-index: 1;
 }
 #projects, #interests, #experience {
   height: auto !important;
@@ -32,9 +40,11 @@ a:hover {
   width: 100%
 }
 #projects {
-  background-color: grey;
+  background-color: #8C2F39;
   width: 100%;
   padding-top: 10%;
+  padding-left: 5%;
+  padding-right: 10%;
   padding-bottom: 20%;
 }
 #interests {
@@ -47,13 +57,13 @@ a:hover {
 /* NAVIGATION */
 .nav {
   float: right;
-  position: relative;
-  padding: 10px 20px 0px 10px;
-  margin-top: 5px;
-  margin-right: 5px;
+  position: fixed;
+  right:0;
+  padding: 15px 20px 0px 10px;
   display: block;
   font-size: 22%;
   font-weight: 100;
+  z-index: 2;
 }
 .nav ul {
   list-style:none;
@@ -82,8 +92,9 @@ a:hover {
   padding-top: 10%; /* Smaller screens 15%*/
   padding-bottom: 10%;
   position: relative;
-  top: 35%;
-  transform: translateY(-50%);
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
 }
 .heading {
   text-align: center;
@@ -103,6 +114,9 @@ a:hover {
   line-height: 1;
 }
 .initials{
+  float: left;
+  position: fixed;
+  left:0;
   padding: 0% 0% 0% 10px;
   display: inline-block;
 }
@@ -140,7 +154,7 @@ a:hover {
   /*width: 243px;
   height: 136px;*/
   width: 90%;
-  box-shadow: 4px 4px 7px #502E5B;
+  box-shadow: 4px 4px 7px #461120;
   opacity: 0.5;
   filter: alpha(opacity=40);
   transition: opacity .55s ease-in-out;
