navbar resizes on desktop

--- a/css/style.css
+++ b/css/style.css
@@ -274,10 +274,8 @@ a:hover {
 	color: #152238;
 	width: 70%;
 	top: 30px;
-	/* padding-left: 50px;
-	padding-right: 50px; */
 	border-radius: 40px;
-	padding: 15px 30px;
+	padding: 15px 140px;
 	filter: drop-shadow(10px 8px 15px #1c1c1c);
 }
 
@@ -300,6 +298,9 @@ a:hover {
 		padding-top: 20%;
 		padding-bottom: 20%;
 	}
+	.navbar {
+		padding: 15px 10px;
+	}
 }
 
 @media screen and (min-width:415px) and (max-width:559px) {
@@ -321,6 +322,13 @@ a:hover {
 	}
 }
 
+@media screen and (max-width: 700px) {
+	.navbar {
+		padding: 15px 30px;
+		width: 80%;	
+	}
+}
+
 @media screen and (min-width:560px) and (max-width:959px) {
 	h1 {
 		font-size: 4rem;
@@ -337,6 +345,9 @@ a:hover {
 	#experience {
 		padding-top: 20%;
 		padding-bottom: 20%;
+	}
+	.navbar {
+		padding: 15px 65spx;
 	}
 }
 
