--- a/css/style.css
+++ b/css/style.css
@@ -282,13 +282,6 @@ a:hover {
 	z-index: 1500;
 	position: fixed;
 }
-.hamburger-right {
-	float:right;
-}
-.hamburger-vis {
-	visibility: hidden;
-}
-
 
 /* --------------- MEDIA QUERIES -------------------- */
 @media screen and (max-width:414px) {
@@ -301,48 +294,19 @@ a:hover {
 	h3 {
 		font-size: 0.5rem;
 	}
-	h6 {
-		width: 100%;
+	.icon {
+		font-size: 1em;
 	}
-
+	.navbar h6 {
+		font-size: 0.7rem;
+	}
 	#experience {
 		padding-top: 20%;
 		padding-bottom: 20%;
 	}
-
-	.icon {
-		font-size: 1em;
-	}
 	.navbar {
-		background: white;
-		z-index: 100;
-		position: fixed;
-		color: #152238;
-		width: 100% !important;
-		top: 0px;
-		border-radius: 0px;
-		padding: 60% 20%;
-		filter: none;
-		opacity: 0%;
-		height: 100%;
-		transition: 0.5s;
-	}
-	.slide {
-		opacity: 100%;
-		transition: 0.5s;
-	}
-	.name {
-		z-index: 1000;
-		position: absolute;
-		top: 30px;
-		left: 20px;
-		font-size: 2rem;
-	}
-	.hamburger-vis {
-		visibility: visible;
-	}
-	.nav-text {
-		font-size: 2rem;
+		padding: 15px 15px;
+		width: 90%;
 	}
 }
 
